--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,24 +5,24 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Launch a test",
+      "name": "All tests",
       "type": "go",
       "request": "launch",
-      "mode": "auto",
-      "program": "${fileDirname}",
-      "args": ["-test.v", "-test.run", "^${selectedText}$"],
+      "mode": "test",
+      "buildFlags": "-v -tags=all",
+      "program": "${workspaceFolder}/adguard",
       "env": {
         "TF_ACC": "1"
       },
-      "showLog": true,
-      "envFile": "${workspaceFolder}/.env"
+      "envFile": "${workspaceFolder}/.env",
+      "showLog": true
     },
     {
       "name": "Attach to process",
       "type": "go",
       "request": "attach",
       "mode": "local",
-      "processId": 65340
+      "processId": 1234
     }
   ]
 }
