--- a/docker/conf/AdGuardHome.yaml
+++ b/docker/conf/AdGuardHome.yaml
@@ -115,7 +115,14 @@ whitelist_filters:
     url: https://adguardteam.github.io/HostlistsRegistry/assets/filter_3.txt
     name: Test Allow List
     id: 3
-user_rules: []
+user_rules:
+  - '# block access to blocked.org and all its subdomains'
+  - '||blocked.org^'
+  - '# unblock access to unblocked.org and all its subdomains'
+  - '@@||unblocked.org^'
+  - '# respond with 127.0.0.1 for localhost.org (but not for its subdomains)'
+  - 127.0.0.1 localhost.org
+  - '! bang comment'
 dhcp:
   enabled: false
   interface_name: ""
