Update release workflow

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,14 +1,11 @@
-# Visit https://goreleaser.com for documentation on how to customize this
-# behavior.
 before:
   hooks:
-    # this is just an example and not a requirement for provider building/publishing
     - go mod tidy
 builds:
   - env:
       # goreleaser does not work with CGO, it could also complicate
       # usage by users in CI/CD systems like Terraform Cloud where
-      # they are unable to install libraries.
+      # they are unable to install libraries
       - CGO_ENABLED=0
     mod_timestamp: "{{ .CommitTimestamp }}"
     flags:
@@ -42,7 +39,7 @@ signs:
   - artifacts: checksum
     args:
       # if you are using this in a GitHub action or some other automated pipeline, you
-      # need to pass the batch flag to indicate its not interactive.
+      # need to pass the batch flag to indicate its not interactive
       - "--batch"
       - "--local-user"
       - "{{ .Env.GPG_FINGERPRINT }}" # set this environment variable for your signing key
@@ -54,7 +51,5 @@ release:
   extra_files:
     - glob: "terraform-registry-manifest.json"
       name_template: "{{ .ProjectName }}_{{ .Version }}_manifest.json"
-  # If you want to manually examine the release before its live, uncomment this line:
+  # if you want to manually examine the release before its live, uncomment this line:
   # draft: true
-changelog:
-  skip: true
