Add DNS rewrite data source

--- a/docker/conf/AdGuardHome.yaml
+++ b/docker/conf/AdGuardHome.yaml
@@ -66,7 +66,9 @@ dns:
   safesearch_cache_size: 1048576
   parental_cache_size: 1048576
   cache_time: 30
-  rewrites: []
+  rewrites:
+    - domain: example.org
+      answer: 1.2.3.4
   blocked_services: []
   upstream_timeout: 10s
   private_networks: []
