Add DNS access data source and test

--- a/docker/conf/AdGuardHome.yaml
+++ b/docker/conf/AdGuardHome.yaml
@@ -37,7 +37,9 @@ dns:
   fastest_addr: false
   fastest_timeout: 1s
   allowed_clients: []
-  disallowed_clients: []
+  disallowed_clients:
+    - test-client-access-blocked
+    - 10.0.0.0/8
   blocked_hosts:
     - version.bind
     - id.server
