--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -6,6 +6,7 @@ services:
     restart: unless-stopped
     volumes:
       - "./conf:/opt/adguardhome/conf"
+      - "./ssl:/opt/adguardhome/ssl"
     ports:
       - "8080:8080/tcp"
       - "3000:3000/tcp"
