chore: update to newest version of config file

--- a/docker/conf/AdGuardHome.yaml
+++ b/docker/conf/AdGuardHome.yaml
@@ -1,5 +1,9 @@
-bind_host: 0.0.0.0
-bind_port: 8080
+http:
+  pprof:
+    port: 6060
+    enabled: false
+  address: 0.0.0.0:8080
+  session_ttl: 720h
 users:
   - name: admin
     password: $2a$10$iQpJ7YlAHX7JBHOxHLAAieVRDKcBTfLoTAPmbUrCyetbLoy1YW1xy
@@ -8,21 +12,11 @@ block_auth_min: 15
 http_proxy: ""
 language: ""
 theme: auto
-debug_pprof: false
-web_session_ttl: 720
 dns:
   bind_hosts:
     - 0.0.0.0
   port: 53
   anonymize_client_ip: false
-  protection_enabled: true
-  blocking_mode: default
-  blocking_ipv4: ""
-  blocking_ipv6: ""
-  blocked_response_ttl: 10
-  protection_disabled_until: null
-  parental_block_host: family-block.dns.adguard.com
-  safebrowsing_block_host: standard-block.dns.adguard.com
   ratelimit: 20
   ratelimit_whitelist: []
   refuse_any: true
@@ -34,6 +28,7 @@ dns:
     - 149.112.112.10
     - 2620:fe::10
     - 2620:fe::fe:10
+  fallback_dns: []
   all_servers: false
   fastest_addr: false
   fastest_timeout: 1s
@@ -64,29 +59,6 @@ dns:
   ipset: []
   ipset_file: ""
   bootstrap_prefer_ipv6: false
-  filtering_enabled: true
-  filters_update_interval: 24
-  parental_enabled: false
-  safebrowsing_enabled: false
-  safebrowsing_cache_size: 1048576
-  safesearch_cache_size: 1048576
-  parental_cache_size: 1048576
-  cache_time: 30
-  safe_search:
-    enabled: false
-    bing: true
-    duckduckgo: true
-    google: true
-    pixabay: true
-    yandex: true
-    youtube: true
-  rewrites:
-    - domain: example.org
-      answer: 1.2.3.4
-  blocked_services:
-    - facebook
-    - instagram
-    - snapchat
   upstream_timeout: 10s
   private_networks: []
   use_private_ptr_resolvers: true
@@ -165,6 +137,41 @@ dhcp:
     lease_duration: 86400
     ra_slaac_only: false
     ra_allow_slaac: false
+filtering:
+  blocking_ipv4: ""
+  blocking_ipv6: ""
+  blocked_services:
+    schedule:
+      time_zone: UTC
+    ids:
+      - facebook
+      - instagram
+      - snapchat
+  protection_disabled_until: null
+  safe_search:
+    enabled: false
+    bing: true
+    duckduckgo: true
+    google: true
+    pixabay: true
+    yandex: true
+    youtube: true
+  blocking_mode: default
+  parental_block_host: family-block.dns.adguard.com
+  safebrowsing_block_host: standard-block.dns.adguard.com
+  rewrites:
+    - domain: example.org
+      answer: 1.2.3.4
+  safebrowsing_cache_size: 1048576
+  safesearch_cache_size: 1048576
+  parental_cache_size: 1048576
+  cache_time: 30
+  filters_update_interval: 24
+  blocked_response_ttl: 10
+  filtering_enabled: true
+  parental_enabled: false
+  safebrowsing_enabled: false
+  protection_enabled: true
 clients:
   runtime_sources:
     whois: true
@@ -181,12 +188,15 @@ clients:
         pixabay: false
         yandex: false
         youtube: false
+      blocked_services:
+        schedule:
+          time_zone: UTC
+        ids: []
       name: Test Client Data Source
-      tags:
-        - device_other
       ids:
         - 192.168.100.100
-      blocked_services: []
+      tags:
+        - device_other
       upstreams: []
       use_global_settings: true
       filtering_enabled: false
@@ -195,15 +205,16 @@ clients:
       use_global_blocked_services: true
       ignore_querylog: false
       ignore_statistics: false
-log_file: ""
-log_max_backups: 0
-log_max_size: 100
-log_max_age: 3
-log_compress: false
-log_localtime: false
-verbose: false
+log:
+  file: ""
+  max_backups: 0
+  max_size: 100
+  max_age: 3
+  compress: false
+  local_time: false
+  verbose: false
 os:
   group: ""
   user: ""
   rlimit_nofile: 0
-schema_version: 20
+schema_version: 27
