--- a/.github/workflows/testacc.yaml
+++ b/.github/workflows/testacc.yaml
@@ -13,6 +13,7 @@ on:
 env:
   GOPROXY: https://proxy.golang.org,direct
   DEBIAN_FRONTEND: noninteractive
+  GO_VERSION: "1.21"
 
 jobs:
   testacc:
@@ -21,12 +22,11 @@ jobs:
     strategy:
       matrix:
         terraform_version: ["~1.4.0", "~1.5.0", "~1.6.0"]
-        go_version: ["1.20", "1.21"]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
         with:
-          go-version: ${{ matrix.go_version }}
+          go-version: ${{ env.GO_VERSION }}
       - uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: ${{ matrix.terraform_version }}
