--- a/.github/workflows/testacc.yaml
+++ b/.github/workflows/testacc.yaml
@@ -13,13 +13,15 @@ on:
 env:
   GOPROXY: https://proxy.golang.org,direct
   DEBIAN_FRONTEND: noninteractive
-  GO_VERSION: "1.20"
-  TERRAFORM_VERSION: "1.4.2"
+  GO_VERSION: "1.21"
 
 jobs:
   testacc:
     runs-on: ubuntu-20.04
     timeout-minutes: 10
+    strategy:
+      matrix:
+        terraform_version: ["~1.4.0", "~1.5.0", "~1.6.0"]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
@@ -27,7 +29,7 @@ jobs:
           go-version: ${{ env.GO_VERSION }}
       - uses: hashicorp/setup-terraform@v2
         with:
-          terraform_version: ${{ env.TERRAFORM_VERSION }}
+          terraform_version: ${{ matrix.terraform_version }}
           terraform_wrapper: false
       - name: Run acceptance tests
-        run: make testacc
+        run: echo Using terraform version $(terraform version --json | jq -r .terraform_version) && make testacc
