--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
-  "go.testFlags": ["-v", "-tags=all", "-args", "-test.v"],
+  "go.testFlags": [
+    "-v",
+    "-tags=all",
+    "-args",
+    "-test.v"
+  ],
   "go.testEnvVars": {
     "TF_ACC": "1"
   },
@@ -7,7 +12,7 @@
   "[go]": {
     "editor.formatOnSave": true,
     "editor.codeActionsOnSave": {
-      "source.organizeImports": true
+      "source.organizeImports": "explicit"
     }
   },
   "gopls": {
