--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -6,6 +6,7 @@ services:
     restart: unless-stopped
     volumes:
       - "./conf:/opt/adguardhome/conf"
+      - "./conf/leases.json:/opt/adguardhome/work/data/leases.json"
       - "./ssl:/opt/adguardhome/ssl"
     ports:
       - "8080:8080/tcp"
