--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,7 +1,7 @@
----
+version: "3"
 services:
   adguardhome:
-    image: adguard/adguardhome:v0.107.50
+    image: adguard/adguardhome:v0.107.48
     container_name: adguardhome
     restart: unless-stopped
     volumes:
