--- a/.github/workflows/testacc.yaml
+++ b/.github/workflows/testacc.yaml
@@ -21,7 +21,16 @@ jobs:
     timeout-minutes: 10
     strategy:
       matrix:
-        terraform_version: ["~1.4.0", "~1.5.0", "~1.6.0", "~1.7.0", "~1.8.0", "~1.9.0", "~1.10.0"]
+        terraform_version:
+          [
+            "~1.4.0",
+            "~1.5.0",
+            "~1.6.0",
+            "~1.7.0",
+            "~1.8.0",
+            "~1.9.0",
+            "~1.10.0",
+          ]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
