--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -41,8 +41,8 @@ jobs:
         if: steps.check_changes.outputs.has_changes == 'true'
         run: |
           # configure user
-          git config --global user.name "${{ github.actor }}"
-          git config --global user.email "${{ github.actor }}@users.noreply.github.com"
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "github-actions@github.com"
 
           # stage any file changes to be committed
           git add .
