--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,4 +1,3 @@
-version: "3"
 services:
   adguardhome:
     image: adguard/adguardhome:v0.107.54
@@ -10,4 +9,5 @@ services:
       - "./ssl:/opt/adguardhome/ssl"
     ports:
       - "8080:8080/tcp"
+      - "8443:443/tcp"
       - "3000:3000/tcp"
