--- a/.github/workflows/testacc.yaml
+++ b/.github/workflows/testacc.yaml
@@ -13,7 +13,6 @@ on:
 env:
   GOPROXY: https://proxy.golang.org,direct
   DEBIAN_FRONTEND: noninteractive
-  GO_VERSION: "1.23"
 
 jobs:
   testacc:
@@ -35,7 +34,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version: ${{ env.GO_VERSION }}
+          go-version-file: "go.mod"
       - uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: ${{ matrix.terraform_version }}
